--- a/python_video/web/templates/index.html
+++ b/python_video/web/templates/index.html
@@ -4,10 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>xyzz's Video player</title>
-  <link rel="stylesheet" href="https://www.layuicdn.com/layui/css/layui.css ">
+  <!-- <link rel="stylesheet" href="https://www.layuicdn.com/layui/css/layui.css "> -->
+  <link rel="stylesheet" href="static//layui.css ">
 </head>
 <body> 
-<script src="https://www.layuicdn.com/auto/layui.js"></script>
+<!-- <script src="https://www.layuicdn.com/auto/layui.js"></script> -->
+<script src="static/layui.js"></script>
 
 <table class="layui-table">
   <colgroup>
