--- a/python_video/web/templates/index.html
+++ b/python_video/web/templates/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>xyzz's Video player</title>
   <!-- <link rel="stylesheet" href="https://www.layuicdn.com/layui/css/layui.css "> -->
-  <link rel="stylesheet" href="static//layui.css ">
+  <link rel="stylesheet" href="static/layui.css ">
 </head>
 <body> 
 <!-- <script src="https://www.layuicdn.com/auto/layui.js"></script> -->
